[project]
name = "blank-app-template"
version = "0.1.0"
description = "A simple Streamlit app template."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.59.2",
    "requests>=2.32.0",
    "gTTS>=2.5.0",
    "transformers>=4.42.0",
]

[tool.setuptools]
py-modules = ["LanguageTranslator", "Weather", "streamlit_app", "python1"]

[tool.uv]
package = false
